更新fghrsh发现的问题并打包 [src/PlatformManager.js]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "启动一个独立的 Chrome",
             "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}"
         }
