--- a/package.json
+++ b/package.json
@@ -8,14 +8,28 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-2.0",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "crypto-js": "^4.0.0",
-    "dtsmake": "0.0.10",
-    "ts-loader": "^7.0.5",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
+    "commitizen": "^2.9.6",
+    "core-js": "^2.5.3",
+    "current-device": "^0.7.2",
+    "cz-conventional-changelog": "^2.1.0",
+    "esdoc": "^1.0.4",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^4.17.0",
+    "html-loader": "^0.5.4",
+    "path": "^0.12.7",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.9.6",
-    "whatwg-fetch": "^3.1.0"
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
