--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.17.0",
     "html-loader": "^0.5.4",
+    "import-local": "^3.0.2",
     "path": "^0.12.7",
+    "terser-webpack-plugin": "^3.0.6",
     "ts-loader": "^6.2.2",
     "typescript": "^3.9.6",
-    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-visualizer-plugin": "^0.1.11"
-  }
+  },
+  "dependencies": {}
 }
